[package]
name = "ft5336"
version = "0.2.0"
authors = ["bobgates"]
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver for the FT5336 touch screen driver used on the STM32F746 Discovery board,  built using the embedded-hal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bobgates/ft5336"
keywords = ["embedded-hal", "embedded-hal-driver", "FT5663", "touchscreen"]
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"
